# shardlake

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  DECISIONS.md  Makefile  README.md  ROADMAP.md  RUST_API_DESIGN.md  RUST_DEVELOPMENT.md  RUST_SYSTEM_DESIGN_PATTERNS.md  RUST_WORKSPACE_ARCHITECTURE.md  loop_iteration.sh  loop_scheduler.sh  loop_worker.sh
.github/agents/: product-vision.agent.md
.github/prompts/: assign-open-non-blocked-epic-issues.prompt.md  assign-ready-issues.prompt.md  break-down-epic.prompt.md  check-draft-pr.prompt.md  issue-triage.prompt.md  loop_control.prompt.md  loop_iteration.prompt.md  loop_reconcile.prompt.md  loop_reconcile_control.prompt.md  merge-ready-pr.prompt.md  review-open-pr.prompt.md  review-ready-draft-pr.prompt.md  review-ready-open-pr.prompt.md  sweep-orphan-issues.prompt.md  triage-draft-prs.prompt.md  triage-open-prs.prompt.md  worker-conflict-resolve-pr.prompt.md  worker-merge-pr.prompt.md  worker-review-draft-pr.prompt.md  worker-review-open-pr.prompt.md
.github/workflows/: LOOP.md  assign-open-epic-issues.lock.yml  assign-open-epic-issues.md  create-epics.yml  needs-human-mention.lock.yml  needs-human-mention.md
config/: default.toml
crates/shardlake-bench/: Cargo.toml
crates/shardlake-bench/src/: generate.rs  generator.rs  lib.rs
crates/shardlake-cli/: Cargo.toml
crates/shardlake-cli/src/: main.rs
crates/shardlake-cli/src/commands/: benchmark.rs  build_index.rs  build_index_worker.rs  compare_ann.rs  eval_ann.rs  eval_hybrid.rs  evaluate_partitioning.rs  generate.rs  ingest.rs  merge_shards.rs  mod.rs  publish.rs  serve.rs  validate_manifest.rs
crates/shardlake-core/: Cargo.toml
crates/shardlake-core/src/: config.rs  error.rs  lib.rs  query.rs  types.rs
crates/shardlake-index/: Cargo.toml
crates/shardlake-index/src/: bm25.rs  builder.rs  cache.rs  exact.rs  hybrid.rs  ivf.rs  ivf_pq.rs  kmeans.rs  lib.rs  merge.rs  merger.rs  metrics.rs  pipeline.rs  plugin.rs  pq.rs  query_plan.rs  ranking.rs  searcher.rs  shard.rs  validator.rs  worker.rs
crates/shardlake-index/tests/: bm25.rs  cache.rs  cache_metrics.rs  diskann.rs  integration.rs  ivf.rs  merge.rs  parallel_build.rs  pipeline.rs  plugin.rs  prefetch.rs  ranking.rs  rerank.rs  validation.rs  worker_merge.rs
crates/shardlake-manifest/: Cargo.toml
crates/shardlake-manifest/src/: lib.rs
crates/shardlake-manifest/tests/: dataset_manifest.rs  manifest.rs
crates/shardlake-serve/: Cargo.toml
crates/shardlake-serve/src/: lib.rs  prom.rs  routes.rs
crates/shardlake-storage/: Cargo.toml
crates/shardlake-storage/src/: lib.rs  local.rs  paths.rs  s3.rs
crates/shardlake-storage/tests/: local.rs
docs/: api-reference.md  autonomous-development-loop.md  cli-reference.md  configuration.md  data-formats.md  getting-started.md
fixtures/: sample_10.jsonl
tools/: copilot_pr_state.py  create-epics.sh  gen_sample.py  iteration_log_viewer.py  loop_claim.sh  prepare_pr_worktree.sh  test_loop_scheduler.sh  test_loop_worker.sh
