[workspace]
members = [
    "crates/shardlake-core",
    "crates/shardlake-storage",
    "crates/shardlake-manifest",
    "crates/shardlake-index",
    "crates/shardlake-serve",
    "crates/shardlake-bench",
    "crates/shardlake-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
authors = ["Shardlake Authors"]
license = "MIT"

[workspace.dependencies]
shardlake-core = { path = "crates/shardlake-core" }
shardlake-storage = { path = "crates/shardlake-storage" }
shardlake-manifest = { path = "crates/shardlake-manifest" }
shardlake-index = { path = "crates/shardlake-index" }
shardlake-serve = { path = "crates/shardlake-serve" }
shardlake-bench = { path = "crates/shardlake-bench" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = [] }
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3"
memmap2 = "0.9"
