[package]
name = "shardlake-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "shardlake"
path = "src/main.rs"

[dependencies]
shardlake-core = { workspace = true }
shardlake-storage = { workspace = true }
shardlake-manifest = { workspace = true }
shardlake-index = { workspace = true }
shardlake-serve = { workspace = true }
shardlake-bench = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
