[package]
name = "shardlake-index"
version.workspace = true
edition.workspace = true

[dependencies]
shardlake-core = { workspace = true }
shardlake-storage = { workspace = true }
shardlake-manifest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
chrono = { workspace = true }
memmap2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }
