[package]
name = "shardlake-manifest"
version.workspace = true
edition.workspace = true

[dependencies]
shardlake-core = { workspace = true }
shardlake-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
